adding imagefile extensions as well as a way to get the proxy base class name

--- a/EPiServerMvcBootstrap.csproj
+++ b/EPiServerMvcBootstrap.csproj
@@ -138,6 +138,7 @@
   <ItemGroup>
     <Compile Include="Controllers\ApplicationPageController.cs" />
     <Compile Include="Extensions\DataFactoryExtensions.cs" />
+    <Compile Include="Extensions\ImageFileExtensions.cs" />
     <Compile Include="Extensions\LinkItemCollectionExtensions.cs" />
     <Compile Include="Extensions\StringExtensions.cs" />
     <Compile Include="Models\ImageFile.cs" />
